--- a/index.html
+++ b/index.html
@@ -20,55 +20,52 @@
     </header>
 
     <section class="hero container">
-        <p class="hero__text"></p>
-        <img src="" alt="" class="hero__img">
+        <div class="hero__text">
+            <h2>Customize Here</h2>
+            <p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ullamcorper.
+        </div>
+      
+        </p>
+        <img src="Assets/hero_contractor.jpg" alt="Contractor sanding wood" class="hero__img">
     </section>
 
     <section class="about-testimonial container">
         <div class="about-us">
             <h2 class="about-us__header">About Us</h2>
-            <p class="about-us__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ornare pretium massa ut ultricies. Praesent quis nulla convallis, tristique ante nec, maximus magna. Etiam quam risus, facilisis vitae imperdiet sagittis, laoreet elementum nunc. Curabitur fermentum sollicitudin aliquam. Etiam congue ipsum neque, sit amet fringilla turpis sodales non. Donec at consequat tellus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla vitae lectus volutpat, lobortis diam non, finibus tellus. Vestibulum eu arcu pellentesque, fermentum eros ut, ullamcorper nulla. In hac habitasse platea dictumst. Duis sem justo, fringilla in arcu sit amet, condimentum accumsan libero. Mauris iaculis rhoncus.</p>
-        </div>
+            <p class="about-us__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ornare pretium massa ut ultricies. Praesent quis nulla convallis, tristique ante nec, maximus magna. Etiam quam risus, facilisis vitae imperdiet sagittis, laoreet elementum nunc. Curabitur fermentum sollicitudin aliquam. Etiam congue ipsum neque, sit amet fringilla turpis sodales non. Donec at consequat tellus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        </div> 
         <div class="testimonial">
-            <h2 class="testimonial__header">Testimonial</h2>
-            <blockquote class="testimonial__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In facilisis dictum dictum. Curabitur ultrices ac metus vitae gravida. Praesent dui. </blockquote>
+            <h3 class="testimonial__header">Testimonial</h3>
+            <blockquote class="testimonial__text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. In facilisis dictum dictum. Curabitur ultrices ac metus vitae gravida. Praesent dui. Nulla vitae lectus volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</blockquote>
             <p class="testimonial__name">Sofia Mallorca</p>
         </div>
     </section>
     
     <section class="services container">
-        <h2 class="services__heading">Services</h2>
+        <h2 class="services__header">Services</h2>
         <div class="services__wrapper">
             <div class="service">
                 <img src="" alt="" class="service__img">
                 <h3 class="service__header">Custom Homes</h3>
-                <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.
-
-                </p>
+                <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.</p>
                 <button class="service__btn">Read More</button>
             </div>
             <div class="service">
                 <img src="" alt="" class="service__img">
                 <h3 class="service__header">Remodeling</h3>
-                <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.
-
-                </p>
+                <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.</p>
                 <button class="service__btn">Read More</button>
             </div>
             <div class="service">
                 <img src="" alt="" class="service__img">
                 <h3 class="service__header">Waterproofing</h3>
-                <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.
-
-                </p>
+                <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.</p>
                 <button class="service__btn">Read More</button>
             </div>
             <div class="service">
                 <img src="" alt="" class="service__img">
                 <h3 class="service__header">Roofing</h3>
-                <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.
-
-                </p>
+                <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.</p>
                 <button class="service__btn">Read More</button>
             </div>
         </div>
