--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@300;400;500&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="icon" 
+      type="image/png" 
+      href="Assets/house-64.png"/>
+    <title>Quality Contractors</title>
 </head>
 <body>
 
@@ -45,26 +50,34 @@
         <h2 class="services__header">Services</h2>
         <div class="services__wrapper">
             <div class="service">
-                <img src="" alt="" class="service__img">
-                <h3 class="service__header">Custom Homes</h3>
+                <img src="Assets/custom_homes.jpg" alt="Custom kitchen" class="service__img">
+                <a href="#">
+                     <h3 class="service__header">Custom Homes</h3>
+                </a>
                 <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.</p>
                 <button class="service__btn">Read More</button>
             </div>
             <div class="service">
-                <img src="" alt="" class="service__img">
-                <h3 class="service__header">Remodeling</h3>
+                <img src="Assets/remodeling.jpg" alt="Home being remodeled" class="service__img">
+                <a href="#">
+                    <h3 class="service__header">Remodeling</h3>
+                </a>
                 <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.</p>
                 <button class="service__btn">Read More</button>
             </div>
             <div class="service">
-                <img src="" alt="" class="service__img">
-                <h3 class="service__header">Waterproofing</h3>
+                <img src="Assets/waterproofing.jpg" alt="Basement being waterproofed" class="service__img">
+                <a href="#">
+                    <h3 class="service__header">Waterproofing</h3>
+                </a>
                 <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.</p>
                 <button class="service__btn">Read More</button>
             </div>
             <div class="service">
-                <img src="" alt="" class="service__img">
-                <h3 class="service__header">Roofing</h3>
+                <img src="Assets/roofing.jpg" alt="Roof" class="service__img">
+                <a href="#">
+                    <h3 class="service__header">Roofing</h3>
+                </a>
                 <p class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sem augue, tincidunt ac sodales non, placerat pulvinar purus. In.</p>
                 <button class="service__btn">Read More</button>
             </div>
